# lgi

./: .gitignore  .travis.yml  Makefile  README  README.md  TODO  devsetup.sh  lgi-0.1-1.rockspec  lgi-0.2-1.rockspec  lgi-scm-1.rockspec  lgi.lua  lgi.rockspec  lua-module-lgi.spec  meson.build  meson_options.txt  ref.md  rockspec.in  waf  wscript
.gear/: rules
.gear/tags/: list
.github/: find_asan_ubsan.bash  install_deps.bash  lsan.supp  test-for-msvc-ci.lua  test_make_install.bash  ubsan.supp
.github/workflows/: ci.yml  msvc-ci.yml
docs/: cairo.md  gio.md  gtk.md  guide.md  lgi.md  overview.md  reference.md  variant.md
lgi/: .gitignore  Makefile  Makefile.msvc  buffer.c  call.c  callable.c  class.lua  compat.c  component.lua  core.c  core.lua  core_marshal.c  ctype.c  enum.lua  ffi.lua  gi.c  init.lua  lgi.h  log.lua  marshal.c  meson.build  namespace.lua  object.c  package.lua  record.c  record.lua  version.lua  version.lua.in
lgi/core/: init.lua
lgi/core/lua5/: Makefile  aggr.c  buffer.c  call.c  compiler.lua  compound.c  core.c  ctype.c  lgi.c  lgi.h  lgilua5.c  lua5.lua
lgi/override/: Clutter.lua  GLib-Bytes.lua  GLib-Error.lua  GLib-Markup.lua  GLib-Source.lua  GLib-Timer.lua  GLib-Variant.lua  GObject-Closure.lua  GObject-Object.lua  GObject-Type.lua  GObject-Value.lua  Gdk.lua  Gio-DBus.lua  Gio.lua  GooCanvas.lua  Gst.lua  Gtk.lua  Pango.lua  PangoCairo.lua  cairo.lua
samples/: README.md  cairo.lua  clutterdemo.lua  compress.lua  console.lua  giostream.lua  goocanvas.lua  gst-play-stream.lua  gstplaystream.lua  gstvideo.lua  gtkbuilder.lua  gtkclipboard.lua  gtkconsole.lua  gtkhello.lua  gtklistview.lua  gtkpad.lua  gtkterminal.lua  markupthrough.lua  mxwidgets.lua  repobrowser.lua  soupsvr.lua  tcpsrv.lua  udpsrv.lua
samples/GDbus/: list-system-services.lua
samples/GnomeKeyring/: list-keyrings-passwords.lua
samples/gtk-demo/: demo-application.lua  demo-assistant.lua  demo-builder.lua  demo-buttonboxes.lua  demo-changedisplay.lua  demo-clipboard.lua  demo-colorselector.lua  demo-comboboxes.lua  demo-dialogs.lua  demo-drawingarea.lua  demo-entry-buffer.lua  demo-entry-completion.lua  demo-entry-search.lua  demo-expander.lua  demo-iconview-basics.lua  demo-iconview-editing.lua  demo-images.lua  demo-infobar.lua  demo-links.lua  demo-menus.lua  demo-ofw-mirror.lua  demo-ofw-rotbutton.lua  demo-paned.lua  demo-pickers.lua  demo-pixbufs.lua  demo-printing.lua  demo-rotatedtext.lua  demo-sizegroup.lua  demo-spinner.lua  demo-stockbrowser.lua  demo-text-hypertext.lua  demo-text-multiview.lua  demo-text-scrolltoend.lua  demo-treeview-editable.lua  demo-treeview-liststore.lua  demo-treeview-treestore.lua  demo-uimanager.lua  main.lua
src/: Makefile  arg.h  buffer.c  callable.c  compound.c  core.c  decltype.h  gi.c  glib.c  gtkbuilder.lua  gtkconsole.lua  gtkhello.lua  gtkpad.lua  lgi.c  lgi.h  lgi.lua  lgix-Gio.lua  lgix-Gst-0_10.lua  lgix-Gtk-3_0.lua  lgix-Gtk.lua  marshal.c  object.c  record.c  struct.c  test.lua  wscript  wscript_build
src/lgix/: Clutter.lua  GLib-Variant.lua  GObject-Closure.lua  GObject-Object.lua  GObject-Type.lua  GObject-Value.lua  Gdk.lua  Gio.lua  Gst.lua  Gtk.lua
src/override/: GObject.lua
tests/: .gitignore  Makefile  cairo.lua  config.h  corocbk.lua  dbus.lua  gio.lua  gireg.lua  glib.lua  gobject.lua  gtk.lua  marshal.lua  meson.build  pango.lua  performance.lua  progress.lua  record.lua  test.lua  test_c.c  variant.lua  wscript
tools/: dump-typelib.lua
